--- a/BlazorChatWeb/wwwroot/index.html
+++ b/BlazorChatWeb/wwwroot/index.html
@@ -7,6 +7,7 @@
     <title>BlazorChatWeb</title>
     <base href="/" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="lib/bootstrap-icons/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="BlazorChatWeb.styles.css" rel="stylesheet" />
